fix: test after refactoring
